tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint128_3_random_one_byte_more/serialized.ssz
{]4cMX>lPAD;%sK}'vuP